tests/checker/fail/ambiguous_http_entry.can
Request => Response {
    Response(Body("") * Headers() * Status(200))
}

Request => Response {
    Response(Body("ok") * Headers() * Status(200))
}
